feat: reupdate and simply api and swagger
